--- a/package.json
+++ b/package.json
@@ -5,5 +5,11 @@
   "main": "dist/index.js",
   "repository": "https://github.com/karmek-k/gitfave.git",
   "author": "Bartosz Gleń",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^16.7.2",
+    "prettier": "^2.3.2",
+    "typescript": "^4.4.2"
+  }
 }
