--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^16.7.2",
+    "@types/nunjucks": "^3.1.5",
     "prettier": "^2.3.2",
     "typescript": "^4.4.2"
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "nunjucks": "^3.2.3"
   }
 }
