--- a/package.json
+++ b/package.json
@@ -10,11 +10,19 @@
     "@types/express": "^4.17.13",
     "@types/node": "^16.7.2",
     "@types/nunjucks": "^3.1.5",
+    "nodemon": "^2.0.12",
     "prettier": "^2.3.2",
     "typescript": "^4.4.2"
   },
   "dependencies": {
     "express": "^4.17.1",
     "nunjucks": "^3.2.3"
+  },
+  "scripts": {
+    "dev": "concurrently \"yarn:build:watch\" \"yarn:start:watch\"",
+    "start": "node .",
+    "start:watch": "nodemon .",
+    "build": "tsc",
+    "build:watch": "tsc --watch"
   }
 }
