--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "@types/express": "^4.17.13",
     "@types/node": "^16.7.2",
     "@types/nunjucks": "^3.1.5",
+    "@types/passport": "^1.0.7",
+    "@types/passport-github2": "^1.2.5",
     "nodemon": "^2.0.12",
     "prettier": "^2.3.2",
     "typescript": "^4.4.2"
   },
   "dependencies": {
     "express": "^4.17.1",
-    "nunjucks": "^3.2.3"
+    "nunjucks": "^3.2.3",
+    "passport": "^0.4.1",
+    "passport-github2": "^0.1.12"
   },
   "scripts": {
     "dev": "concurrently \"yarn:build:watch\" \"yarn:start:watch\"",
