--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "express": "^4.17.1",
     "nunjucks": "^3.2.3",
     "passport": "^0.4.1",
-    "passport-github2": "^0.1.12"
+    "passport-github2": "^0.1.12",
+    "pg": "^8.7.1",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.2.37"
   },
   "scripts": {
     "dev": "concurrently \"yarn:build:watch\" \"yarn:start:watch\"",
