--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/nunjucks": "^3.1.5",
     "@types/passport": "^1.0.7",
     "@types/passport-github2": "^1.2.5",
+    "concurrently": "^6.2.1",
     "nodemon": "^2.0.12",
     "prettier": "^2.3.2",
     "typescript": "^4.4.2"
