--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.4",
     "@types/node": "^16.7.2",
     "@types/nunjucks": "^3.1.5",
     "@types/passport": "^1.0.7",
@@ -20,6 +21,7 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "nunjucks": "^3.2.3",
     "passport": "^0.4.1",
     "passport-github2": "^0.1.12",
