--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Bartosz Gleń",
   "license": "MIT",
   "devDependencies": {
+    "@types/csurf": "^1.11.2",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
     "@types/node": "^16.7.2",
@@ -19,6 +20,7 @@
     "typescript": "^4.4.2"
   },
   "dependencies": {
+    "csurf": "^1.11.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
