--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "express-validator": "^6.12.1",
     "nunjucks": "^3.2.3",
     "passport": "^0.4.1",
     "passport-github2": "^0.1.12",
