--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "csurf": "^1.11.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-flash-message": "^2.1.0",
     "express-session": "^1.17.2",
     "express-validator": "^6.12.1",
     "nunjucks": "^3.2.3",
