--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "typescript": "^4.4.2"
   },
   "dependencies": {
+    "@octokit/rest": "^18.10.0",
     "csurf": "^1.11.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
